syntax = "proto3";



message LibV2RayPackedConfig {

  enum LibV2RayConfigureType{
    Invaild = 0;
    FullJsonFile = 1;
    FullProto = 2;
    LibV2RaySimpleProtoV1 = 3;
  }
  LibV2RayConfigureType ConfigType = 1;
  bytes CheckSum = 2; //Always use SHA3-256
  bytes Payload = 3;
}
